--- a/authors.html
+++ b/authors.html
@@ -45,7 +45,7 @@
     <section id="authors" class="authors">
         <div class="container">
             <div class="author-card" data-genre="fiction">
-                <img src="ernest-hemingway.jpg" alt="Ernest Hemingway">
+                <img src="Ernest-Hemingway.jpg" alt="Ernest Hemingway">
                 <h3>Ernest Hemingway</h3>
                 <p>Ernest Hemingway was an American novelist and short story writer. Known for his distinctive writing style.</p>
                 <p><strong>Notable Works:</strong> The Old Man and the Sea, A Farewell to Arms</p>
@@ -67,7 +67,7 @@
             </div>
             <br>
             <div class="author-card" data-genre="science">
-                <img src="isaac-asimov.jpg" alt="Isaac Asimov">
+                <img src="Isaac-Asimov.jpg" alt="Isaac Asimov">
                 <h3>Isaac Asimov</h3>
                 <p>Isaac Asimov was an American author and professor of biochemistry, famous for his works of science fiction and popular science.</p>
                 <p><strong>Notable Works:</strong> I, Robot, Foundation</p>
