--- a/pdfs.html
+++ b/pdfs.html
@@ -31,7 +31,7 @@
         document.addEventListener("DOMContentLoaded", function() {
             let fileLinks = [
                 { name: "Sample PDF", url: "https://raw.githubusercontent.com/KunalSnippet/LINK/main/sample.pdf" },
-                { name: "Example Document", url: "https://raw.githubusercontent.com/KunalSnippet/LINK/main/document.docx" }
+                // { name: "Example Document", url: "https://raw.githubusercontent.com/KunalSnippet/LINK/main/document.docx" }
             ];
 
             let fileListDiv = document.getElementById("fileList");
