--- a/pdfs.html
+++ b/pdfs.html
@@ -30,7 +30,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             let fileLinks = [
-                { name: "Sample PDF", url: "https://raw.githubusercontent.com/KunalSnippet/LINK/main/sample.pdf" },
+                { name: "Sample PDF", url: "https://github.com/shrey1720/Bookworld.git" },
                 // { name: "Example Document", url: "https://raw.githubusercontent.com/KunalSnippet/LINK/main/document.docx" }
             ];
 
